feat: add variable for property select for console command

--- a/.env
+++ b/.env
@@ -1,3 +1,73 @@
+# Переменные для файлов
 NAME_FILE="connect-ssh.json"
-PATH_FILE="/ssh+"
 SEPARATOR="/"
+PATH_FILE="/ssh+"
+
+# Переменные для отступов
+SPACE=" "
+
+# Переменные для параметров выбора
+CONNECT_FILTER_PLACEHOLDER="Введите или выбирите название подключения"
+CONNECT_SELECTION_PROMPT="Выбор подключения"
+CONNECT_FILTER_PROMPT="Поиск по алиуса:"
+CONNECT_PAGE_SIZE="5"
+
+# Переменные для шаблонов выбора
+CONNECT_SELECT_TEMPLATE='
+{{- if .Prompt -}}
+{{ Bold .Prompt }}
+{{ end -}}
+
+{{ if .IsFiltered }}
+{{- print .FilterPrompt " " .FilterInput }}
+{{ end }}
+
+{{- range  $i, $choice := .Choices }}
+{{- if IsScrollUpHintPosition $i }}
+ {{- print "⇡ " -}}
+{{- else if IsScrollDownHintPosition $i -}}
+ {{- print "⇣ " -}}
+{{- else -}}
+ {{- print "  " -}}
+{{- end -}}
+
+{{- if eq $.SelectedIndex $i }}
+{{- print (Foreground "201" (Bold "▸ ")) (Selected $choice) "\n" }}
+{{- else }}
+ {{- print " " (Unselected $choice) "\n" }}
+{{- end }}
+{{- end}}
+'
+
+# Переменные для параметров выбора
+DELETE_FILTER_PLACEHOLDER="Введите или выбирите название для удаление подключения"
+DELETE_SELECTION_PROMPT="Выбор удаление подключения"
+DELETE_FILTER_PROMPT="Поиск по алиуса:"
+DELETE_PAGE_SIZE="5"
+
+# Переменные для шаблонов выбора
+DELETE_SELECT_TEMPLATE='
+{{- if .Prompt -}}
+{{ Bold .Prompt }}
+{{ end -}}
+
+{{ if .IsFiltered }}
+{{- print .FilterPrompt " " .FilterInput }}
+{{ end }}
+
+{{- range  $i, $choice := .Choices }}
+{{- if IsScrollUpHintPosition $i }}
+ {{- print "⇡ " -}}
+{{- else if IsScrollDownHintPosition $i -}}
+ {{- print "⇣ " -}}
+{{- else -}}
+ {{- print "  " -}}
+{{- end -}}
+
+{{- if eq $.SelectedIndex $i }}
+{{- print (Foreground "201" (Bold "× ")) (Selected $choice) "\n" }}
+{{- else }}
+ {{- print " " (Unselected $choice) "\n" }}
+{{- end }}
+{{- end}}
+'
