feat: add new variable for rsa key

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 # Переменные для файлов
-NAME_FILE="connect-ssh.json"
+FILE_NAME_CONNECTS="connect-ssh.json"
 SEPARATOR="/"
 PATH_FILE="/ssh+"
 
 # Переменные для отступов
 SPACE=" "
+
+# Название файла для ключа
+FILE_NAME_CRYPT_KEY="key.txt"
