--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -50,6 +50,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
