fix: update named secret token

--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -50,7 +50,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
