--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -45,12 +45,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create Release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-          GITHUB_TOKEN: ${{ secrets.PAT }}
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
