--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -10,8 +10,6 @@ env:
   MAINTAINER: 'deniskorbakov'
   DESC: 'ssh+ - cli app connect manager for ssh'
 
-
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -47,6 +45,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
