--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -51,13 +51,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: .debpkg/${{ env.APP_NAME }}_${{ github.ref }}.deb
+          asset_path: ${{steps.build_deb_package.outputs.file_name}}
           asset_name: ${{ env.APP_NAME }}_${{ github.ref }}.deb
           asset_content_type: application/octet-stream
