--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -59,18 +59,14 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-        continue-on-error: true
+          tag: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
 
       - name: Upload Release Asset
-        if: steps.create_release.outputs.upload_url
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
