--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -46,30 +46,15 @@ jobs:
           name: deb-package
 
   release:
-    needs: build
+    name: Create Package
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Download Artifact
-        uses: actions/download-artifact@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
-          name: deb-package
+          path: ${{steps.build_deb_package.outputs.file_name}}
 
-      - name: Create Release
-        id: create_release
-        uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+      - name: Release the Package
+        uses: softprops/action-gh-release@v1
         with:
-          tag: ${{ github.ref_name }}
-          name: ${{ github.ref_name }}
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.APP_NAME }}_${{ github.ref_name }}.deb
-          asset_name: ${{ env.APP_NAME }}_${{ github.ref_name }}.deb
-          asset_content_type: application/octet-stream
+          files: ${{steps.build_deb_package.outputs.file_name}}
