--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -40,6 +40,7 @@ jobs:
           name: deb-package
 
   draft_release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
