--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -43,13 +43,6 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: "find env"
-        run: |
-          set | grep GITHUB_ | grep -v GITHUB_TOKEN
-          zip -r pkg.zip *.md
-          echo "$(openssl rand -hex 4)" > "random-name-$(openssl rand -hex 4).txt"
-          echo "$(openssl rand -hex 4)" > "random-name-$(openssl rand -hex 4).txt"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -57,17 +50,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }} (draft)
+          release_name: Release ${{ github.ref }}
           body: |
             Test upload-to-github-release works with `actions/create-release`.
-          draft: true
+          draft: false
           prerelease: false
       - uses: xresloader/upload-to-github-release@main
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
-          file: "*.md;*.zip;random-name-*.txt"
-          delete_file: "random-name-*.txt;random-*.txt"
+          file: ${{steps.build_deb_package.outputs.file_name}}
           release_id: ${{ steps.create_release.outputs.id }}
           update_release_body: ${{ github.ref }}
           update_release_body_append: "true"
