--- a/.github/workflows/build_go_ubuntu.yml
+++ b/.github/workflows/build_go_ubuntu.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-
+        cache: true
     - name: Build
-      run: go build -v ./...
+      run: |
+       CGO_ENABLED=0 GO111MODULE=on \
+       go build -ldflags "-s -w -X main.Release=dev -X main.SHA=dev" -o controller
